k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube-example.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usach-app-service
                port:
                  number: 80
